--- a/artifacts/channel/CreateCAAuto/docker-compose.yaml
+++ b/artifacts/channel/CreateCAAuto/docker-compose.yaml
@@ -5,37 +5,71 @@ networks:
 
 services:
 
-  ca_org1:
+  ca_Dist1:
     image: hyperledger/fabric-ca
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      - FABRIC_CA_SERVER_CA_NAME=ca.org1.example.com
+      - FABRIC_CA_SERVER_CA_NAME=ca.Dist1.example.com
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_PORT=7054
     ports:
       - "7054:7054"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
-      - ./fabric-ca/org1:/etc/hyperledger/fabric-ca-server
-    container_name: ca.org1.example.com
-    hostname: ca.org1.example.com
+      - ./fabric-ca/Dist1:/etc/hyperledger/fabric-ca-server
+    container_name: ca.Dist1.example.com
+    hostname: ca.Dist1.example.com
     networks:
       - test
     
-  ca_org2:
+  ca_Dist2:
     image: hyperledger/fabric-ca
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      - FABRIC_CA_SERVER_CA_NAME=ca.org2.example.com
+      - FABRIC_CA_SERVER_CA_NAME=ca.Dist2.example.com
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_PORT=8054
     ports:
       - "8054:8054"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
-      - ./fabric-ca/org2:/etc/hyperledger/fabric-ca-server
-    container_name: ca.org2.example.com
-    hostname: ca.org2.example.com
+      - ./fabric-ca/Dist2:/etc/hyperledger/fabric-ca-server
+    container_name: ca.Dist2.example.com
+    hostname: ca.Dist2.example.com
+    networks:
+      - test
+    
+  ca_Dist3:
+    image: hyperledger/fabric-ca
+    environment:
+      - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
+      - FABRIC_CA_SERVER_CA_NAME=ca.Dist3.example.com
+      - FABRIC_CA_SERVER_TLS_ENABLED=true
+      - FABRIC_CA_SERVER_PORT=10054
+    ports:
+      - "10054:10054"
+    command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
+    volumes:
+      - ./fabric-ca/Dist3:/etc/hyperledger/fabric-ca-server
+    container_name: ca.Dist3.example.com
+    hostname: ca.Dist3.example.com
+    networks:
+      - test
+    
+  ca_Clients:
+    image: hyperledger/fabric-ca
+    environment:
+      - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
+      - FABRIC_CA_SERVER_CA_NAME=ca.Clients.example.com
+      - FABRIC_CA_SERVER_TLS_ENABLED=true
+      - FABRIC_CA_SERVER_PORT=11054
+    ports:
+      - "11054:11054"
+    command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
+    volumes:
+      - ./fabric-ca/Clients:/etc/hyperledger/fabric-ca-server
+    container_name: ca.Clients.example.com
+    hostname: ca.Clients.example.com
     networks:
       - test
     
