--- a/artifacts/channel/configtx.yaml
+++ b/artifacts/channel/configtx.yaml
@@ -35,15 +35,15 @@ Organizations:
                 Type: Signature
                 Rule: "OR('OrdererMSP.admin')"
 
-    - &Org1
+    - &Dist1
         # DefaultOrg defines the organization which is used in the sampleconfig
         # of the fabric.git development environment
-        Name: Org1MSP
+        Name: Dist1MSP
 
         # ID to load the MSP definition as
-        ID: Org1MSP
+        ID: Dist1MSP
 
-        MSPDir: crypto-config/peerOrganizations/org1.example.com/msp
+        MSPDir: crypto-config/peerOrganizations/Dist1.example.com/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -51,34 +51,34 @@ Organizations:
         Policies:
             Readers:
                 Type: Signature
-                Rule: "OR('Org1MSP.admin', 'Org1MSP.peer', 'Org1MSP.client')"
+                Rule: "OR('Dist1MSP.admin', 'Dist1MSP.peer', 'Dist1MSP.client')"
             Writers:
                 Type: Signature
-                Rule: "OR('Org1MSP.admin', 'Org1MSP.client')"
+                Rule: "OR('Dist1MSP.admin', 'Dist1MSP.client')"
             Admins:
                 Type: Signature
-                Rule: "OR('Org1MSP.admin')"
+                Rule: "OR('Dist1MSP.admin')"
             Endorsement:
                 Type: Signature
-                Rule: "OR('Org1MSP.peer')"
+                Rule: "OR('Dist1MSP.peer')"
 
         # leave this flag set to true.
         AnchorPeers:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer0.org1.example.com
+            - Host: peer0.Dist1.example.com
               Port: 7051
-
-    - &Org2
+    
+    - &Dist2
         # DefaultOrg defines the organization which is used in the sampleconfig
         # of the fabric.git development environment
-        Name: Org2MSP
+        Name: Dist2MSP
 
         # ID to load the MSP definition as
-        ID: Org2MSP
+        ID: Dist2MSP
 
-        MSPDir: crypto-config/peerOrganizations/org2.example.com/msp
+        MSPDir: crypto-config/peerOrganizations/Dist2.example.com/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -86,23 +86,92 @@ Organizations:
         Policies:
             Readers:
                 Type: Signature
-                Rule: "OR('Org2MSP.admin', 'Org2MSP.peer', 'Org2MSP.client')"
+                Rule: "OR('Dist2MSP.admin', 'Dist2MSP.peer', 'Dist2MSP.client')"
             Writers:
                 Type: Signature
-                Rule: "OR('Org2MSP.admin', 'Org2MSP.client')"
+                Rule: "OR('Dist2MSP.admin', 'Dist2MSP.client')"
             Admins:
                 Type: Signature
-                Rule: "OR('Org2MSP.admin')"
+                Rule: "OR('Dist2MSP.admin')"
             Endorsement:
                 Type: Signature
-                Rule: "OR('Org2MSP.peer')"
+                Rule: "OR('Dist2MSP.peer')"
 
         AnchorPeers:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer0.org2.example.com
-              Port: 9051
+            - Host: peer0.Dist2.example.com
+              Port: 8051
+
+    - &Dist3
+        # DefaultOrg defines the organization which is used in the sampleconfig
+        # of the fabric.git development environment
+        Name: Dist3MSP
+
+        # ID to load the MSP definition as
+        ID: Dist3MSP
+
+        MSPDir: crypto-config/peerOrganizations/Dist3.example.com/msp
+
+        # Policies defines the set of policies at this level of the config tree
+        # For organization policies, their canonical path is usually
+        #   /Channel/<Application|Orderer>/<OrgName>/<PolicyName>
+        Policies:
+            Readers:
+                Type: Signature
+                Rule: "OR('Dist3MSP.admin', 'Dist3MSP.peer', 'Dist3MSP.client')"
+            Writers:
+                Type: Signature
+                Rule: "OR('Dist3MSP.admin', 'Dist3MSP.client')"
+            Admins:
+                Type: Signature
+                Rule: "OR('Dist3MSP.admin')"
+            Endorsement:
+                Type: Signature
+                Rule: "OR('Dist3MSP.peer')"
+
+        AnchorPeers:
+            # AnchorPeers defines the location of peers which can be used
+            # for cross org gossip communication.  Note, this value is only
+            # encoded in the genesis block in the Application section context
+            - Host: peer0.Dist3.example.com
+              Port: 10051
+
+    - &Clients
+        # DefaultOrg defines the organization which is used in the sampleconfig
+        # of the fabric.git development environment
+        Name: ClientsMSP
+
+        # ID to load the MSP definition as
+        ID: ClientsMSP
+
+        MSPDir: crypto-config/peerOrganizations/Clients.example.com/msp
+
+        # Policies defines the set of policies at this level of the config tree
+        # For organization policies, their canonical path is usually
+        #   /Channel/<Application|Orderer>/<OrgName>/<PolicyName>
+        Policies:
+            Readers:
+                Type: Signature
+                Rule: "OR('ClientsMSP.admin', 'ClientsMSP.peer', 'ClientsMSP.client')"
+            Writers:
+                Type: Signature
+                Rule: "OR('ClientsMSP.admin', 'ClientsMSP.client')"
+            Admins:
+                Type: Signature
+                Rule: "OR('ClientsMSP.admin')"
+            Endorsement:
+                Type: Signature
+                Rule: "OR('ClientsMSP.peer')"
+
+        AnchorPeers:
+            # AnchorPeers defines the location of peers which can be used
+            # for cross org gossip communication.  Note, this value is only
+            # encoded in the genesis block in the Application section context
+            - Host: peer0.Clients.example.com
+              Port: 11051
+
 
 ################################################################################
 #
@@ -308,8 +377,10 @@ Profiles:
         Application:
             <<: *ApplicationDefaults
             Organizations:
-                - *Org1
-                - *Org2
+                - *Dist1
+                - *Dist2
+                - *Dist3
+                - *Clients
             Capabilities:
                 <<: *ApplicationCapabilities
 
@@ -356,5 +427,7 @@ Profiles:
         Consortiums:
             SampleConsortium:
                 Organizations:
-                - *Org1
-                - *Org2
+                - *Dist1
+                - *Dist2
+                - *Dist3
+                - *Clients
