--- a/artifacts/channel/CreateCAAuto/docker-compose.yaml
+++ b/artifacts/channel/CreateCAAuto/docker-compose.yaml
@@ -5,71 +5,37 @@ networks:
 
 services:
 
-  ca_Dist1:
+  ca_org1:
     image: hyperledger/fabric-ca
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      - FABRIC_CA_SERVER_CA_NAME=ca.Dist1.example.com
-      - FABRIC_CA_SERVER_TLS_ENABLED=true
-      - FABRIC_CA_SERVER_PORT=7054
-    ports:
-      - "7054:7054"
-    command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
-    volumes:
-      - ./fabric-ca/Dist1:/etc/hyperledger/fabric-ca-server
-    container_name: ca.Dist1.example.com
-    hostname: ca.Dist1.example.com
-    networks:
-      - test
-    
-  ca_Dist2:
-    image: hyperledger/fabric-ca
-    environment:
-      - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      - FABRIC_CA_SERVER_CA_NAME=ca.Dist2.example.com
+      - FABRIC_CA_SERVER_CA_NAME=ca.org1.example.com
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_PORT=8054
     ports:
       - "8054:8054"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
-      - ./fabric-ca/Dist2:/etc/hyperledger/fabric-ca-server
-    container_name: ca.Dist2.example.com
-    hostname: ca.Dist2.example.com
+      - ./fabric-ca/org1:/etc/hyperledger/fabric-ca-server
+    container_name: ca.org1.example.com
+    hostname: ca.org1.example.com
     networks:
       - test
     
-  ca_Dist3:
+  ca_org2:
     image: hyperledger/fabric-ca
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      - FABRIC_CA_SERVER_CA_NAME=ca.Dist3.example.com
+      - FABRIC_CA_SERVER_CA_NAME=ca.org2.example.com
       - FABRIC_CA_SERVER_TLS_ENABLED=true
-      - FABRIC_CA_SERVER_PORT=10054
+      - FABRIC_CA_SERVER_PORT=12054
     ports:
-      - "10054:10054"
+      - "12054:12054"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
-      - ./fabric-ca/Dist3:/etc/hyperledger/fabric-ca-server
-    container_name: ca.Dist3.example.com
-    hostname: ca.Dist3.example.com
-    networks:
-      - test
-    
-  ca_Clients:
-    image: hyperledger/fabric-ca
-    environment:
-      - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      - FABRIC_CA_SERVER_CA_NAME=ca.Clients.example.com
-      - FABRIC_CA_SERVER_TLS_ENABLED=true
-      - FABRIC_CA_SERVER_PORT=11054
-    ports:
-      - "11054:11054"
-    command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
-    volumes:
-      - ./fabric-ca/Clients:/etc/hyperledger/fabric-ca-server
-    container_name: ca.Clients.example.com
-    hostname: ca.Clients.example.com
+      - ./fabric-ca/org2:/etc/hyperledger/fabric-ca-server
+    container_name: ca.org2.example.com
+    hostname: ca.org2.example.com
     networks:
       - test
     
@@ -79,9 +45,9 @@ services:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca-orderer
       - FABRIC_CA_SERVER_TLS_ENABLED=true
-      - FABRIC_CA_SERVER_PORT=9054
+      - FABRIC_CA_SERVER_PORT=10054
     ports:
-      - "9054:9054"
+      - "10054:10054"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
       - ./fabric-ca/ordererOrg:/etc/hyperledger/fabric-ca-server
